--- a/app/src/main/res/layout/activity_qr.xml
+++ b/app/src/main/res/layout/activity_qr.xml
@@ -4,26 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:gravity="center"
+    android:orientation="vertical"
     tools:context=".QrActivity">
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button3"
-        android:layout_width="0dp"
-        android:layout_height="75dp"
-        android:layout_marginStart="46dp"
-        android:layout_marginEnd="45dp"
-        android:layout_marginBottom="114dp"
-        android:background="@drawable/bg_button3"
-        android:fontFamily="@font/librefranklin_medium"
-        android:text="Сканировать QR-код"
-        android:drawableStart="@drawable/scan"
-        android:paddingStart="29dp"
-        android:drawablePadding="-30dp"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="20sp"
+    <com.budiyev.android.codescanner.CodeScannerView
+        android:id="@+id/scanner_id"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
