--- a/app/src/main/res/layout/activity_information_of_tvactivity.xml
+++ b/app/src/main/res/layout/activity_information_of_tvactivity.xml
@@ -57,6 +57,7 @@
             android:layout_marginStart="25dp"
             android:layout_marginEnd="25dp"
             android:ems="10"
+            android:padding="16dp"
             android:background="@drawable/bg_app"
             android:inputType="number"
             android:textSize="16sp"
@@ -87,6 +88,7 @@
             android:layout_marginStart="25dp"
             android:layout_marginEnd="195dp"
             android:ems="10"
+            android:padding="16dp"
             android:inputType="time"
             android:textSize="16sp"
             android:fontFamily="@font/librefranklin_medium"
@@ -107,6 +109,7 @@
             android:fontFamily="@font/librefranklin_semibold"
             android:textColor="@color/blue1"
             android:textSize="16sp"
+            android:onClick="save"
             android:text="Сохранить"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
