--- a/app/src/main/res/layout/close_layuot.xml
+++ b/app/src/main/res/layout/close_layuot.xml
@@ -6,6 +6,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:padding="16dp"
         android:hint="Введите время закрытия смены"
         android:inputType="time"
